fixed text align

--- a/assets/Hero1.css
+++ b/assets/Hero1.css
@@ -55,6 +55,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 .hero1__title {
     /* font-size: 3rem; */
